@@ -33,7 +33,7 @@ public class HashTable_SC<Key, Value> implements ST<Key, Value> {
     public void put(Key key, Value value) {
         int index = getIndex(key);
         @SuppressWarnings("unchecked") Node bucket = (Node) buckets[index];
-        List<Node> matches = nodesAsStream(bucket).takeWhile(Objects::nonNull).filter(node -> node.key.equals(key)).collect(Collectors.toList());
+        List<Node> matches = nodesAsStream(bucket).takeWhile(Objects::nonNull).filter(node -> node.key.equals(key)).toList();
         if (matches.size() == 1)
             matches.get(0).value = value;
         else if (matches.size() == 0)
@@ -64,7 +64,7 @@ public class HashTable_SC<Key, Value> implements ST<Key, Value> {
         Set<Key> result = new TreeSet<>();
         for (Object bucket : buckets)
             //noinspection unchecked
-            result.addAll(nodesAsStream((Node) bucket).map(node -> node.key).collect(Collectors.toList()));
+            result.addAll(nodesAsStream((Node) bucket).map(node -> node.key).toList());
         return result;
     }
 
